fix(domain): 添加模型对象线程安全性说明注释
- 统一为 ChatChunk、ChatMessage、ChatRequest、ChatResponse、TokenUsage、ToolCall、ToolDefinition 模型添加线程安全性详细注释
- 明确不可变值对象字段均为 final 且集合不可变，支持多线程安全共享和传递
- 指明 Conversation 对象非线程安全，需外部同步或单线程访问
- 优化 ASM ClassWriter 配置说明，避免 ASM 9.x 在特定字节码下异常
- 为 DownloadRateLimitService 的 RateLimitResult 字段添加注释，说明含义与使用情况